--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.19.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "openai": "^4.57.0",
